[metadata]
name = sykel
version = 0.0.1
url = https://gitlab.dev.beat.no/oystein/sykel
description = Sykel - Software Lifecycle Util
long_description = file: README.md
author = Øystein S. Haaland
author_email = oystein@beat.no

[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[options]
install_requires =
    invoke
    bumpversion     # for version module
    twine           # for package module

packages = sykel

[options.entry_points]
console_scripts =
    sykel = sykel.__main__:program.run

[bumpversion:file:setup.cfg]

[bumpversion:file:sykel/__init__.py]
