[metadata]
name = sykel
version = attr: sykel.__version__
url = https://github.com/beat-no/sykel
description = Sykel - Software Lifecycle Util
long_description = file: README.md
author = Øystein S. Haaland
author_email = oystein@beat.no

[options]
install_requires = 
	invoke
	bumpversion     # for version module
	twine           # for package module
packages = sykel

[options.entry_points]
console_scripts = 
	sykel = sykel.__main__:program.run

[bumpversion]
current_version = 0.0.2
commit = True
tag = True

[bumpversion:file:setup.cfg]

[bumpversion:file:sykel/__init__.py]
